2006-07-23  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gtk/Makefile.am: Remove back the install-exec-hook that removes _gtk.la.

2006-07-23  Johan Dahlin  <johan@gnome.org>

	* Makefile.am:
	* gtk/Makefile.am:
	* gtk/__init__.py:
	* gtk/_gtk.py:
	* gtk/_lazyutils.py:
	* gtk/deprecation.py:
	* gtk/gtk.override:
	* gtk/gtkmodule.c: (init_gtk):
	* gtk/libglademodule.c: (initglade):

	Revert dynamic namespaces, it is not possible
	to solve it without breaking the ABI.

2006-07-23  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gtk/_gtk.py: Add _PyGtk_API alias from _gtkimpl, for
	compatibility reasons.

	* gtk/Makefile.am (install-exec-hook): Uninstall old _gtk.la, if
	installed, else it may conflict with _gtkimpl.la.

2006-07-22  John Finlay  <finlay@moeraki.com>

	* atk.defs (atk_implementor_ref_accessible): Attach as
	AtkImplementorIface method

	* atk-types.defs (AtkImplementorIface): Revert to registered name.

	* gtk/gtk-base-types.defs: Annotate interfaces with prerequisites
	and objects with interface implementations

	* gtk/gtk-2.10-types.defs: Annotate interfaces with prerequisites
	and objects with interface implementations. Reorganize.

	* codegen/reversewrapper.py (VoidReturn.write_conversion) 
	(DoubleReturn.write_conversion, GBoxedReturn.write_conversion): Use
	failure_exception instead of failure_cleanup
	(GtkTreePathReturn): Add.

	* gtk/gdk-base.defs (get_display_name, get_n_screens, get_screen) 
	(get_default_screen, closed): Add GdkDisplay virtual defs
	(create_gc, draw_rectangle, draw_arc, draw_polygon, draw_text) 
	(draw_text_wc, draw_drawable, draw_points, draw_segments) 
	(draw_lines, draw_glyphs, draw_image, get_depth, get_size) 
	(set_colormap, get_colormap, get_visual, get_screen, get_image) 
	(get_clip_region, get_visible_region, get_composite_drawable) 
	(draw_pixbuf, draw_glyphs_transformed, draw_trapezoids) 
	(ref_cairo_surface): Add GdkDrawable virtual defs
	(get_values, set_values, set_dashes): Add GdkGC virtual defs