@@ -1,3 +1,8 @@
+2006-07-23  John Finlay  <finlay@moeraki.com>
+
+	* codegen/reversewrapper.py (PangoFontDescriptionReturn) 
+	(PangoFontMetricsReturn, PangoLanguageReturn): Add
+
 2006-07-23  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
 	* gtk/Makefile.am: Remove back the install-exec-hook that removes _gtk.la.
